tests/ui/const-generics/transmute-const-param-static-reference.min.stderr
error: `&'static ()` is forbidden as the type of a const generic parameter
  --> $DIR/transmute-const-param-static-reference.rs:9:23
   |
LL | struct Const<const P: &'static ()>;
   |                       ^^^^^^^^^^^
   |
   = note: the only supported types are integers, `bool`, and `char`

error: aborting due to 1 previous error

